# gix-each

./: .gitignore  Cargo.toml  README.md
ref/: update-git-repos.sh
src/: main.rs
